kubernetes/apps/syncthing/syncthing/app/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: syncthing
spec:
  selector:
    matchLabels:
      app: syncthing
  serviceName: syncthing
  replicas: 1
  template:
    metadata:
      labels:
        app: syncthing
      annotations:
        k8s.v1.cni.cncf.io/networks: multus/macvlan-homelab
    spec:
      terminationGracePeriodSeconds: 60
      containers:
        - name: syncthing
          image: lscr.io/linuxserver/syncthing:1.27.12
          ports:
            - name: web-ui
              containerPort: 8384
            - name: syncthing-tcp
              containerPort: 32222
              protocol: TCP
            - name: syncthing-udp
              containerPort: 32222
              protocol: UDP
          volumeMounts:
            - name: syncthing-config
              mountPath: /config
            - name: data
              mountPath: /data
        - name: nginx
          image: registry.hub.docker.com/library/nginx:1.27.2
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d
            - name: nginx-htpasswd
              mountPath: /etc/nginx/secret
            - name: data
              mountPath: /data
      volumes:
        - name: init-scripts
          configMap:
            name: init-scripts-config
        - name: syncthing-config
          persistentVolumeClaim:
            claimName: syncthing-config
        - name: data
          persistentVolumeClaim:
            claimName: syncthing-data
        - name: nginx-config
          configMap:
            name: nginx-config
        - name: nginx-htpasswd
          secret:
            secretName: nginx-htpasswd
