kubernetes/apps/syncthing/syncthing/app/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  ports:
    - port: 80
      name: http
  selector:
    app: syncthing
---
apiVersion: v1
kind: Service
metadata:
  name: syncthing-gui
spec:
  ports:
    - port: 8384
      name: syncthing-gui
  selector:
    app: syncthing
---
apiVersion: v1
kind: Service
metadata:
  name: syncthing-protocol
spec:
  type: ClusterIP
  ports:
    - name: syncthing-tcp
      protocol: TCP
      port: 32222
      targetPort: 32222
    - name: syncthing-udp
      protocol: UDP
      port: 32222
      targetPort: 32222
  selector:
    app: syncthing
